# python-genai

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_usage.py  demo.ipynb  prompt_ai.ipynb
python_genai/: __init__.py  language_model.py
src/python_genai/: __init__.py  _widget.py  prompt.py
tests/: test_models.py
wiki3_ai/: language_model.py
